environments/prod/modules/lb/alb.tf
// Application Load Balancer (alb)
resource "aws_lb" "main" {
  name               = "${var.environment}-lfusys-alb"
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = var.subnet_public_ids
}

// ALB Security Group (allows HTTP/HTTPS connections, no outbound rules)
resource "aws_security_group" "alb_sg" {
  name   = "${var.environment}-lfusys-alb-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

// ALB Listener
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
    target_group_arn = aws_lb_target_group.gateway.arn
  }
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.main.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = var.certificate_arn
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.gateway.arn
  }
}

// Path-based routing (api/v1/upload/* -> uploads, everything else -> gateway)
resource "aws_lb_listener_rule" "uploads_rule" {
  listener_arn = aws_lb_listener.http.arn
  priority     = 10

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.uploads.arn
  }

  condition {
    path_pattern {
      values = ["/api/v1/upload/*"]
    }
  }
}

resource "aws_lb_listener_rule" "uploads_rule_https" {
  listener_arn = aws_lb_listener.https.arn
  priority     = 10

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.uploads.arn
  }

  condition {
    path_pattern {
      values = ["/api/v1/upload/*"]
    }
  }
}

// Target Group (Gateway service)
resource "aws_lb_target_group" "gateway" {
  name        = "${var.environment}-lfusys-gateway-tg"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    path                = "/health/live"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 30
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }
}

// Target Group (Uploads service)
resource "aws_lb_target_group" "uploads" {
  name        = "${var.environment}-lfusys-uploads-tg"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    path                = "/health/live"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 30
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }
}
